[package]
name = "carry-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sync server for Carry - local-first data sync"

[dependencies]
carry-engine = { path = "../engine" }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio.workspace = true

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "migrate", "chrono"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
